--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context=".MainActivity">
-    <TextView
+
+    <!--  Menu superior  -->
+    <RelativeLayout
+        android:id="@+id/rltveLayout_topMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="#DFD3D3"
+        app:layout_constraintBottom_toTopOf="@id/rcylerView_noteList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/txtView_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/imgBtn_list_view"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:layout_toStartOf="@id/imgBtn_list_view"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
+        <ImageView
+            android:id="@+id/imgBtn_list_view"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@id/imgBtn_grid_view"
+            android:padding="4dp"
+            android:src="@drawable/ic_list_view" />
+
+        <ImageView
+            android:id="@+id/imgBtn_grid_view"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8dp"
+            android:padding="4dp"
+            android:src="@drawable/ic_grid_view" />
+    </RelativeLayout>
+
+    <!--  Lista de Notas  -->
+    <!--  tools: listItem nos permite ver o layout dos itens previamente  -->
+    <!--  tools: itemCount nos permite mexer na quantidade de itens
+      presentes na lista apenas no desenvolvimento (preview)  -->
+    <androidx.recyclerview.widget.RecyclerView
+        tools:visibility="visible"
+        android:id="@+id/rcylerView_noteList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintHeight_max="450dp"
+        app:layout_constraintTop_toBottomOf="@id/rltveLayout_topMenu"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/itemlist_linear"
+        tools:itemCount="10"
+        />
+
+    <!--  Botão add Nota  -->
+    <Button
+        tools:visibility="visible"
+        android:id="@+id/btn_addNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Adicionar Nota"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/rcylerView_noteList"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
