--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,33 +25,35 @@
             android:id="@+id/txtView_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/imgBtn_list_view"
+            android:layout_alignBaseline="@id/imgView_list_view"
             android:layout_alignParentStart="true"
             android:layout_centerInParent="true"
-            android:layout_toStartOf="@id/imgBtn_list_view"
+            android:layout_toStartOf="@id/imgView_list_view"
             android:gravity="center"
             android:text="@string/app_name"
             android:textStyle="bold"
             android:textSize="18sp"/>
 
         <ImageView
-            android:id="@+id/imgBtn_list_view"
+            android:id="@+id/imgView_list_view"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginEnd="8dp"
-            android:layout_toStartOf="@id/imgBtn_grid_view"
+            android:layout_toStartOf="@id/imgView_grid_view"
             android:padding="4dp"
-            android:src="@drawable/ic_list_view" />
+            android:src="@drawable/ic_list_view"
+            android:contentDescription="Layout: grid" />
 
         <ImageView
-            android:id="@+id/imgBtn_grid_view"
+            android:id="@+id/imgView_grid_view"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="8dp"
             android:padding="4dp"
-            android:src="@drawable/ic_grid_view" />
+            android:src="@drawable/ic_grid_view"
+            android:contentDescription="Layout: list"/>
     </RelativeLayout>
 
     <!--  Lista de Notas  -->
