--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="#DFD3D3"
+        android:background="@drawable/background_border"
+        android:paddingVertical="4dp"
         app:layout_constraintBottom_toTopOf="@id/rcylerView_noteList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,18 +32,18 @@
             android:layout_toStartOf="@id/imgView_list_view"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/imgView_list_view"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:layout_toStartOf="@id/imgView_grid_view"
+            android:contentDescription="Layout: grid"
             android:padding="4dp"
-            android:src="@drawable/ic_list_view"
-            android:contentDescription="Layout: grid" />
+            android:src="@drawable/ic_list_view" />
 
         <ImageView
             android:id="@+id/imgView_grid_view"
@@ -60,22 +61,23 @@
     <!--  tools: listItem nos permite ver o layout dos itens previamente  -->
     <!--  tools: itemCount nos permite mexer na quantidade de itens
       presentes na lista apenas no desenvolvimento (preview)  -->
+
+    <!--  Botão add Nota  -->
     <androidx.recyclerview.widget.RecyclerView
-        tools:visibility="visible"
         android:id="@+id/rcylerView_noteList"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintHeight_max="450dp"
-        app:layout_constraintTop_toBottomOf="@id/rltveLayout_topMenu"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/itemlist_linear"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="450dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rltveLayout_topMenu"
         tools:itemCount="10"
-        />
+        tools:listitem="@layout/itemlist_note"
+        tools:visibility="visible" />
 
-    <!--  Botão add Nota  -->
     <Button
         tools:visibility="visible"
         android:id="@+id/btn_addNote"
