--- a/app/src/main/res/layout/itemlist_note.xml
+++ b/app/src/main/res/layout/itemlist_note.xml
@@ -5,7 +5,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-             android:layout_marginBottom="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="8dp"
             android:background="#F4D4D4">
     <TextView
         android:id="@+id/txtView_note"
