--- a/app/src/main/res/layout/itemlist_note.xml
+++ b/app/src/main/res/layout/itemlist_note.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -7,11 +7,20 @@
             android:padding="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginHorizontal="8dp"
-            android:background="#F4D4D4">
+            android:background="@drawable/background_border">
     <TextView
-        android:id="@+id/txtView_note"
+        android:id="@+id/txtView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:padding="8dp"
+        tools:text="Compras da semana"/>
+    <TextView
+        android:id="@+id/txtView_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
         android:textSize="18sp"
-        tools:text="Essa é uma nota que eu acabei de criar e é muito linda"/>
-</FrameLayout>
+        tools:text="Essa é uma nota que eu acabei de criar e é muito linda\nmais um texto pra nós"/>
+</LinearLayout>
